src/hospital/.kubernetes/api-gateway/api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
  - name: proxy-ssl
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
        - name: "kong.ssl"
          group: ""
          kind: "Secret"
