src/hospital/.kubernetes/api-gateway/ehr-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ehr-routes
  annotations:
    konghq.com/strip-path: 'false'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/consultations
    backendRefs:
    - name: ehr-service
      kind: Service
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /api/hospitalisations
    backendRefs:
    - name: ehr-service
      kind: Service
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /api/interventions
    backendRefs:
    - name: ehr-service
      kind: Service
      port: 8080
