src/hospital/.kubernetes/api-gateway/medicalife-api-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: medicalife-api-routes
  annotations:
    konghq.com/strip-path: 'false'
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/auth
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/codifications
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/consultations
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/hopitaux
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/hospitalisations
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/transferts
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/interventions
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/notifications
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/patients
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/personnel
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/prescriptions
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/bilans
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/radios
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/rendez-vous
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /api/soins
    backendRefs:
    - name: medicalife-api
      kind: Service
      port: 443
