src/hospital/.kubernetes/api-gateway/notification-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: notification-routes
  annotations:
    konghq.com/strip-path: 'false'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/notifications
    backendRefs:
    - name: notification-service
      kind: Service
      port: 8080
