src/hospital/.kubernetes/api-gateway/personnel-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: personnel-routes
  annotations:
    konghq.com/strip-path: "false"
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/personnel
      backendRefs:
        - name: personnel-service
          kind: Service
          port: 8080
