src/hospital/.kubernetes/api-gateway/reception-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: reception-routes
  annotations:
    konghq.com/strip-path: 'false'
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/reception
    backendRefs:
    - name: reception-service
      kind: Service
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /api/urgences
    backendRefs:
    - name: reception-service
      kind: Service
      port: 80
